# inifinite-fn

./: .gitignore  README.md  pyproject.toml
infinite_fn/: main.py
infinite_fn/python_fns/: lodging.py  trip.py  weather.py
infra/: Dockerfile  docker-compose.yml
tests/: test_findex.py
