[tool.poetry]
name = "infinite-fn"
version = "0.1.0"
description = ""
authors = ["Trayan Azarov <trayan.azarov@amikos.tech>"]
readme = "README.md"
packages = [{include = "infinite_fn"}]

[tool.poetry.dependencies]
python = "^3.11"
func-ai = "^0.0.14"
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
